Migrate to jdk9